# amazon-short-url

./: README.md  pyproject.toml
.github/workflows/: release.yml  test.yml
amazon_short_url/: cli.py
